--- a/src/assets/styles/components/Search.css
+++ b/src/assets/styles/components/Search.css
@@ -2,28 +2,27 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    height: 150px;
+    flex-direction: row;
+    height: 100px;
     border-radius: 0px 0px 40px 40px;
   }
   
   .main__title {
     color: white;
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .input {
     background-color: rgba(255,255,255,0.1);
-    border: 2px solid white;
+    border: 1.5px solid white;
     border-radius: 25px;
     color: white;
     font-family: 'Muli', sans-serif;
     font-size: 16px;
-    height: 50px;
-    margin-bottom: 20px;
+    height: 40px;
     outline: none;
-    padding: 0px 20px;
-    width: 50%;
+    padding: 0px 80px;
+    width: 100%;
   }
   
   ::placeholder {
