creation of routes

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Muli', sans-serif;
-    background: #873A64;
+    background-image: linear-gradient(#873A64, #8f57fd);
 }
 
   
